[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.14, 0.18, 1)

[node name="Header" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Bug Rancher"
horizontal_alignment = 1

[node name="CurrencyLabel" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "üí∞ 0"
horizontal_alignment = 2

[node name="ScreenContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="CompendiumBtn" type="Button" parent="NavBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "üìñ
Compendium"

[node name="BreedingBtn" type="Button" parent="NavBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "ü•ö
Breeding"

[node name="ShopBtn" type="Button" parent="NavBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "üè™
Shop"
